Add sfutils::base interface library to cmake

--- a/sfutils_unicode/CMakeLists.txt
+++ b/sfutils_unicode/CMakeLists.txt
@@ -3,5 +3,4 @@ find_package(Boost REQUIRED COMPONENTS locale)
 add_library(sfutils_unicode INTERFACE)
 add_library(${PROJECT_NAME}::unicode ALIAS sfutils_unicode)
 target_link_libraries(sfutils_unicode INTERFACE Boost::locale)
-target_include_directories(sfutils_unicode INTERFACE "${PROJECT_SOURCE_DIR}")
-target_compile_features(sfutils_unicode INTERFACE cxx_std_20)
+target_link_libraries(sfutils_unicode INTERFACE sfutils::base)
