feat:Library fundamentally changed
-Unicode string stores data in fixed-length
 grapheme clusters
-Using cpp-unicodelib instead of boost::locale
-Cross-platform wcwidth

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,27 @@
+# Targets for external linking:
+# sfutils::base    - (include files under <sfutils/base/...>)
+# sfutils::unicode - (include files under <sfutils/unicode/...>)
 cmake_minimum_required(VERSION 3.15)
-project(sfutils LANGUAGES CXX)
+project(sfutils)
 
 option(ENABLE_TESTING "Enable Testing" OFF)
 
-add_library(sfutils_base INTERFACE)
-add_library(${PROJECT_NAME}::base ALIAS sfutils_base)
-target_include_directories(sfutils_base INTERFACE "${PROJECT_SOURCE_DIR}")
-target_compile_features(sfutils_base INTERFACE cxx_std_20)
+include(GNUInstallDirs)
 
-add_subdirectory(sfutils_unicode)
+set(EXPORT_FILE ${PROJECT_NAME}Config)
+include(cmake/check_features.cmake)
+include(cmake/common_options_and_procject_config.cmake)
+include(cmake/cpp-unicodelib.cmake)
+include(cmake/wcwidth.cmake)
+add_subdirectory(include/sfutils/base)
+add_subdirectory(include/sfutils/unicode)
 
 if(ENABLE_TESTING)
 	enable_testing()
 	add_subdirectory(test)
 endif()
+
+install(EXPORT ${EXPORT_FILE}
+	NAMESPACE ${PROJECT_NAME}::
+	DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
+export(EXPORT ${EXPORT_FILE} NAMESPACE ${PROJECT_NAME}::)
