--- a/include/sfutils/unicode/CMakeLists.txt
+++ b/include/sfutils/unicode/CMakeLists.txt
@@ -4,9 +4,11 @@ add_library(${LIB_NAME} INTERFACE)
 target_link_libraries(${LIB_NAME} INTERFACE ${PROJECT_NAME}::base
 	INTERFACE ${PROJECT_NAME}::cpp-unicodelib
 	INTERFACE ${PROJECT_NAME}::wcwidth)
+set_target_properties(${LIB_NAME} PROPERTIES EXPORT_NAME unicode)
 add_library(${PROJECT_NAME}::unicode ALIAS ${LIB_NAME})
 
 install(TARGETS ${LIB_NAME} EXPORT ${EXPORT_FILE})
 install(FILES encoding_cvt.hpp unicode_string.hpp usym_width.hpp
+	ustring_iterator.hpp
 	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}/unicode)
 
